<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fragment_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragment.EditWordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/enter_your_own"
            android:id="@+id/edit_phrase_fragment_instructions_textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <RelativeLayout
            android:id="@+id/edit_word_fragment_input_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edit_word_fragment_action_buttons_linearlayout"
            android:layout_below="@id/edit_phrase_fragment_instructions_textview"
            android:focusableInTouchMode="true">
            <TextView
                android:id="@+id/edit_word_fragment_word_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/edit_word_fragment_word_edittext"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
            <EditText
                android:id="@+id/edit_word_fragment_word_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:hint="@string/enter_new_word"
                android:imeOptions="actionDone"
                android:inputType="textAutoCorrect" />

            <LinearLayout
                android:id="@+id/edit_word_fragment_word_buttons_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_word_fragment_word_edittext"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/edit_word_fragment_synonym_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/get_synonym" />

                <Button
                    android:id="@+id/edit_word_fragment_rhyme_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/get_rhyme" />


            </LinearLayout>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_word_fragment_word_edittext"
                android:indeterminate="true"
                android:visibility="gone"
                android:id="@+id/edit_word_fragment_word_progressbar"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/edit_word_fragment_action_buttons_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_word_fragment_cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/edit_word_fragment_submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>