<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fragment_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragment.InputPhraseFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_input_phrase_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/enter_a_phrase_to_wreck"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fragment_input_phrase_submit_phrase_button"
            android:layout_below="@id/fragment_input_phrase_title_textview"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/fragment_input_phrase_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:hint="@string/enter_phrase"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences|textAutoCorrect"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </RelativeLayout>

        <Button
            android:id="@+id/fragment_input_phrase_submit_phrase_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/submit" />


    </RelativeLayout>

</FrameLayout>
