<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fragment_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragment.ViewPhraseFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/view_phrase_fragment_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:text="@string/here_is_your_wrecked_phrase"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/view_phrase_fragment_phrase_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_phrase_fragment_title_textview"
            android:layout_margin="@dimen/view_phrase_phrase_textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <ImageView
            android:id="@+id/view_phrase_fragment_tts_imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tts"
            android:layout_below="@id/view_phrase_fragment_phrase_textview"/>

        <TextView
            android:id="@+id/view_phrase_fragment_buttons_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view_phrase_fragment_buttons_linearlayout"
            android:layout_marginTop="@dimen/view_phrase_phrase_textview"
            android:text="@string/send_to_a_friend_or_make_another_wrecked_phrase"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:id="@+id/view_phrase_fragment_buttons_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/view_phrase_fragment_send_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/send" />

            <Button
                android:id="@+id/view_phrase_fragment_start_again_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wreck_new_phrase" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/view_phrase_fragment_favourite_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_favourite"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_above="@+id/view_phrase_fragment_buttons_textview"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</FrameLayout>