<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/fragment_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragment.AboutFragment">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/color_primary"
        app:contentPadding="@dimen/cardview_padding_about_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:id="@+id/fragment_about_cardview">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@raw/logo" />

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/created_by_daniel_bouzaid"
        android:id="@+id/fragment_about_created_by_textview"
        android:layout_below="@id/fragment_about_cardview"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:layout_marginTop="@dimen/line_spacing"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/special_thanks_to"
        android:id="@+id/fragment_about_thanks_textview"
        android:layout_below="@id/fragment_about_created_by_textview"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginTop="@dimen/line_spacing"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:id="@+id/fragment_about_credits_textview"
        android:layout_below="@id/fragment_about_thanks_textview"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="@dimen/line_spacing"
        android:layout_marginRight="@dimen/credits_margin"
        android:layout_marginEnd="@dimen/credits_margin"
        android:layout_marginLeft="@dimen/credits_margin"
        android:layout_marginStart="@dimen/credits_margin"/>





</RelativeLayout>